remove Freelance2.scss and merge it with Listing.scss. Fix style for responsive effect on mobile, tablet and desktop mode. Add InfiniteScroll component.

--- a/src/styles/Listing.scss
+++ b/src/styles/Listing.scss
@@ -1,5 +1,14 @@
+@font-face {
+font-family: 'balooBhaina2Regular';
+src: url('../font/BalooBhaina2-Regular.ttf') format('truetype');
+}
+
 .Listing {
   background-color: lightgray;
+
+  ul {
+    padding-bottom: 15px;
+  }
 }
 
 .everyFreelanceCards {
@@ -13,4 +22,87 @@
   height: initial;
 }
 
+body {
+  background: #eee;
+  }
 
+$card-width: 150px;
+$image-size: 100%;
+$card-height: 30vh;
+$font-main: 'balooBhaina2Regular', sans-serif;
+
+.freelance2:hover {
+  transform: scale(1.09);
+}
+
+.freelance2 {
+  display: inline-flex;
+
+  .container {
+
+    margin: 20px 15px 20px 15px;
+
+    .card {
+      width: $card-width;
+      height: $card-height;
+      background-color: #24A198;;
+      box-shadow: 0 5px 20px #555;
+
+      .card-image {
+        width: $image-size;
+        position: relative;
+        overflow: hidden;
+        height: auto;
+
+        img {
+          width: $image-size;
+          position: relative;
+        }
+
+      }
+
+      .card-body {
+          text-align: center;
+          box-sizing: border-box;
+
+        .card-name {
+            font-family: $font-main;
+
+        h4 {
+          font-size: 0.9rem;
+          margin: 0px;
+          text-decoration: none;
+        }
+      } 
+
+        .card-title {
+          p {
+            font-size: 0.8rem;
+            color:white;
+            margin: 0;
+        }
+      }
+
+        .card-name, .card-title {
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: bold;
+        }
+
+        .card-name, .card-excerpt {
+          color:black;
+        }
+      }
+    }
+  }
+}
+
+/* ******************************************************************* */
+
+@media screen and (min-width: 1024px) {
+  .Listing ul {
+    align-items: center;
+    max-width: 1024px;
+    list-style: none;
+  }
+}
